<resources>
    <string name="app_name">CursoAndroid</string>

    <string name="main_txt_helloworld">Alô, mamãe!</string>
    <string name="databinding_btn_oi">Oi</string>
    <string name="databinding_btn_classe">Evento via Classe</string>
    <string name="databinding_btn_metodo">Evento via Método</string>
    <string name="databinding_btn_lambda">Evento via lambda</string>
    <string name="componente_txt_titulo">Componentes</string>
    <string name="componente_txt_textview">TextView</string>
    <string name="componente_txt_button">Button</string>
    <string name="componente_txt_mensagem">TextView é usada para exibir mensagens estáticas na tela. Funciona junto com o ScrollView.</string>
    <string name="componente_btn_botao_normal">Exemplo de Botão normal</string>
    <string name="componente_txt_textinput">TextInputEditText</string>
    <string name="componente_edt_nome">Nome</string>
    <string name="componente_edt_senha">Senha</string>
    <string name="componente_edt_mensagem">Mensagem</string>
    <string name="navigation_fragmento1">Fragmento 1</string>
    <string name="navigation_fragmento2">Fragmento 2</string>
    <string name="navigation_fragmento3">Fragmento 3</string>
    <string name="main_btn_fragmentos">Exemplo fragmentos</string>
    <string name="main_btn_recycler">Exemplo de Recycler View</string>
    <string name="main_btn_atividade">Ciclo de vida da atividade</string>
    <string name="main_btn_componente">Exemplo de componentes</string>
    <string name="main_btn_data_binding">Exemplo com DataBinding</string>
    <string name="main_btn_retrofit">Exemplo com retrofit</string>
</resources>