<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <!-- =============================== -->
    <!-- DADOS ......................... -->
    <!-- =============================== -->

    <data />

    <!-- =============================== -->
    <!-- LAYOUT ........................ -->
    <!-- =============================== -->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/spacing_normal"
                android:text="@string/componente_txt_titulo"
                android:textAlignment="center"
                android:textSize="@dimen/font_larger"
                android:textStyle="bold" />

            <TextView
                style="@style/subtitulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/componente_txt_textview" />

            <!-- ellipsize + minLines = Colocar os tres pontinhos no final da palavra -->
            <TextView
                android:id="@+id/componente_txt_mensagem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minLines="2"
                android:ellipsize="end"
                android:text="@string/componente_txt_mensagem"/>

            <TextView
                style="@style/subtitulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/componente_txt_button" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/componente_btn_botao_normal"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/blue_800"
                android:text="@string/componente_btn_botao_normal"/>

            <Button
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/componente_btn_botao_normal"/>

            <RatingBar
                android:id="@+id/ratingBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <SeekBar
                android:id="@+id/seekBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <ProgressBar
                android:id="@+id/progressBar2"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextClock
                android:id="@+id/textClock"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <CalendarView
                android:id="@+id/calendarView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                style="@style/subtitulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/componente_txt_textinput" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_margin="@dimen/spacing_normal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/componente_edt_nome"
                    android:hint="@string/componente_edt_nome"
                    android:inputType="textPersonName"
                    android:imeOptions="actionNext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_margin="@dimen/spacing_normal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/componente_edt_mensagem"
                    android:hint="@string/componente_edt_mensagem"
                    android:inputType="textMultiLine|text|textUri"
                    android:imeOptions="actionNext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_margin="@dimen/spacing_normal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/componente_edt_senha"
                    android:hint="@string/componente_edt_senha"
                    android:inputType="numberPassword"
                    android:imeOptions="actionDone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.chip.ChipGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.chip.Chip
                    android:text="Aula"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <com.google.android.material.chip.Chip
                    android:text="Recreio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </com.google.android.material.chip.ChipGroup>

            <WebView

                android:layout_width="match_parent"
                android:layout_height="match_parent" />


        </LinearLayout>

    </ScrollView>


</layout>
