<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <!-- Para habilitar este layout para usar o Data Binding, precisamos
            colocar a tag <layout> na raiz do arquivo

        Teremos duas seções:
            - Dados
            - Layout
     -->

    <!-- =============================== -->
    <!-- DADOS ......................... -->
    <!-- =============================== -->

    <data/>

    <!-- =============================== -->
    <!-- LAYOUT ........................ -->
    <!-- =============================== -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/databinding_txt_painel"
            android:layout_margin="@dimen/spacing_normal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/databinding_btn_lambda"
            android:text="@string/databinding_btn_lambda"
            android:layout_margin="@dimen/spacing_normal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/databinding_btn_classe"
            android:text="@string/databinding_btn_classe"
            android:layout_margin="@dimen/spacing_normal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/databinding_btn_metodo"
            android:text="@string/databinding_btn_metodo"
            android:layout_margin="@dimen/spacing_normal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>



    </LinearLayout>

</layout>
